--- a/public/front-assets/css/style.css
+++ b/public/front-assets/css/style.css
@@ -412,8 +412,10 @@ main section { padding-top: 25px;}
 .razorpay-payment-button { width: 100%; padding: 10px 20px; background-color: #001d3d; color: #fff; border-radius: 5px; font-size: 1rem;; }
 .razorpay-payment-button:hover { background-color: #f7ca0d; border-color: #f7ca0d; }
 
-.lightSelected { color: var(--white); text-shadow: 1px 1px 1px #000; padding:5px 10px; display: inline-block; margin-top: 5px; border-radius: 3px;; font-weight: bold; background: linear-gradient(45deg, #5639e6, #FD0C91, #f4d22a);
-  background: -webkit-linear-gradient(45deg, #5639e6, #FD0C91, #f4d22a);}
+.neon_lightSelected { color: var(--white); background-color: var(--primary); text-shadow: 1px 1px 1px #000;  padding:3px 7px; display: inline-block; margin-top: 5px; border-radius: 3px;; font-weight: bold;}
+
+.floro_lightSelected { color: var(--white); text-shadow: 1px 1px 1px #000; padding:3px 7px; display: inline-block; margin-top: 5px; border-radius: 3px;; font-weight: bold; background: linear-gradient(45deg, #5639e6, #FD0C91, #f4d22a);
+    background: -webkit-linear-gradient(45deg, #5639e6, #FD0C91, #f4d22a);}
 
 .model-preview { cursor: pointer;}
 #text { height:70px; font-size:16px; border-radius: 5px; width:100%; text-align: center; padding: 20px; box-sizing: border-box; text-align: left; overflow: hidden; }
