--- a/public/front-assets/css/style.css
+++ b/public/front-assets/css/style.css
@@ -104,8 +104,8 @@ header .navbar .nav-link:hover .nav_name { color:var(--secondary); }
 .productDetailsTabs { margin: 30px 0 20px 0;}
 .productDetailsTabs .nav-tabs { margin-bottom: 20px;}
 .productDetailsTabs .nav-tabs .nav-link {border-radius: 5px 5px 0 0; background-color: var(--white); border: 1px #e5e5e5 solid; }
-.productDetailsTabs .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus { background-color: var(--secondary); border-color: var(--secondary); color: var(--white) !important;}
-.productDetailsTabs .nav .nav-item button.active { border-radius: 5px 5px 0 0; background-color: var(--secondary); color: var(--white) !important;}
+.productDetailsTabs .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus { background-color: var(--primary); border-color: var(--primary); color: var(--white) !important;}
+.productDetailsTabs .nav .nav-item button.active { border-radius: 5px 5px 0 0; background-color: var(--primary); color: var(--white) !important;}
 .productDetailsTabs .nav-tabs .nav-link { font-size: 13px; text-transform: capitalize; padding:8px 15px;}
 .productDetailsTabs .nav-tabs .nav-link:last-child { border-right: 1px #e5e5e5 solid;}
 
@@ -123,10 +123,29 @@ header .navbar .nav-link:hover .nav_name { color:var(--secondary); }
 .slider-nav { margin-top: 15px;}
 .slider-nav .img-thumbnail { margin: 0 7px;}
 
-header { background-color: var(--white); position: fixed; top:0; left:0; width: 100%; z-index: 99;}
+header { background-color: var(--white); width: 100%; z-index: 99;}
+#mainWrapper { position: fixed; top:0; left: 0;}
 .navbar .btn { padding:13px; font-size: 15px; height: 51px;}
-main { margin-top: 151px;}
+main { margin-top: 134px;}
 main section { padding-top: 25px;}
+
+
+.priceHover { position: relative; margin-top: 5px; padding-right: 25px;}
+.priceHover::after { content: ""; width: 25px; height: 25px; position: absolute; right:0px; top:3px; background: url('../images/sprites.svg'); background-repeat: no-repeat; background-position: -193px -90px;  }
+.priceHover:hover>.breakups { display: block; }
+
+.breakups { display: none; z-index: 999; width: 250px; right:0; top:30px; box-shadow: 0 5px 6px rgba(0, 0, 0, 0.2); border-radius: 4px; position: absolute; padding:10px 15px; background-color: var(--white); color: var(--black); }
+.breakups .breakup-details { display: flex; }
+.breakups .breakup-details .icon-tick {  margin-top: 3px;; height: 35px; width: 35px; background: url('../images/sprites.svg'); background-repeat: no-repeat; background-position: -192px -43px;  ;}
+.breakups .breakup-details .text { margin-left: 15px;}
+.breakups .breakup-details .text p { margin: 0;}
+.breakups .breakup-details .text .red { color: var(--dark-grey);}
+
+
+
+
+.customFrameWrapper { background-color: var(--secondary); padding: 13px 0; color: var(--white);}
+
 .logoWrapper { padding:10px 0;}
 .logoWrapper .btnLink { margin-right: 10px; margin-top: 8px; border:1px #ccc solid; padding:7px 12px 4px 12px; border-radius: 5px; height: 37px;}
 .logoWrapper .btnLink:hover { background-color: var(--primary); color: var(--white); border-color: var(--primary);}
@@ -135,7 +154,7 @@ main section { padding-top: 25px;}
 .navbarHeader { border-bottom:1px #ccc solid; padding: 12px 0 8px 0;}
 .page-header { box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2); background-color: var(--white); border-top:1px #ccc solid; border-bottom:1px #ccc solid; }
 .page-header.is-sticky { position: fixed; height: 100px; top:0; width: 100%; z-index: 99; }
-.back-to-top { position: fixed; bottom:15px; right:17px; padding:5px; border-radius: 100px; display: inline-block; cursor: pointer; z-index: 999;  }
+.back-to-top { position: fixed; bottom:15px; right:17px; padding:5px; border-radius: 100px; display: inline-block; cursor: pointer; z-index: 999; background-color: var(--white);  }
 .back-to-top .icon { background-position:-153px -41px; display: block; height: 39px; width: 39px; }
 .back-to-top:hover .icon { background-position:-153px -79px; }
 
@@ -208,8 +227,8 @@ main section { padding-top: 25px;}
 .image-upload-wrapper .preview .btn { position: absolute; right:7px; top:7px;}
 
 .nav-tabs .nav-link { border:none; font-size: 12px; border-right: 1px #ccc solid;;}
-.product-tab .nav-link  { padding: 9px 25px 12px 24px; background-color: var(--white);}
-.size-tab .nav-link  { padding: 9px 18px 12px 18px; }
+.product-tab .nav-link  { padding: 9px 26px 12px 26px; background-color: var(--white);}
+.size-tab .nav-link  { padding: 9px 19px 12px 19px; }
 .nav-tabs .nav-link:last-child { border-right: none;}
 .nav-tabs .nav-link.active { background-color: var(--primary); color: var(--white); border-right: 1px var(--primary solid);}
 .nav-tabs .nav-item.show .nav-link { background-color: var(--green); color: var(--white);}
@@ -224,7 +243,7 @@ main section { padding-top: 25px;}
 .wrap-container .container { padding:0 10px;}
 .accordion-body { padding:10px 0 0 0;}
 .frame-generate { padding:10px; color: var(--black);}
-.renderFrame { padding:20px 30px;}
+.renderFrame { padding:30px;}
 .renderFrame .mainImg { display: flex; margin-top: 10px; }
 .renderFrame .mainImg .create-your-prints { width: 70%; }
 .renderFrame .mainImg .create-your-prints .h-scale { border-left: 1px dashed #999;
@@ -330,10 +349,12 @@ main section { padding-top: 25px;}
 .custom-radio:hover { border-color: var(--dark-grey);}
 .custom-radio.active { border-color: var(--green); color: var(--black); }
 .custom-radio.active::after { content:"✔"; position: absolute; top:0px; right:0px; background-color: var(--green); color: var(--white); height: 20px; width: 20px; border-radius: 0 2px 0 0; padding:2px 5px; display: block; font-size: 10px;}
-.product, .size, .hardware_style { height: 125px; }
+.product, .size { height: 125px; }
+.hardware_style { height: 145px; }
+.hardware_style img { margin-bottom: 8px;}
 
 .custom-radio-wrap { margin-bottom: 10px;}
-.custom-radio-wrap .wrapMain { display: inline-block; border: 2px solid #ccc; border-radius: 4px; position: relative; width: 100%; cursor: pointer; padding:8px 5px; text-align: center; margin-bottom: 10px; transition: all 0.3s; color:var(--dark-grey) }
+.custom-radio-wrap .wrapMain { display: inline-block; border: 2px solid #ccc; border-radius: 4px; position: relative; width: 100%; cursor: pointer; text-align: center; margin-bottom: 10px; transition: all 0.3s; color:var(--dark-grey) }
 .custom-radio-wrap p { margin: 0;}
 .custom-radio-wrap .icon { width: 35px; margin-bottom: 5px;}
 .custom-radio-wrap input { display: none; /* Hide default radio button */}
@@ -395,8 +416,10 @@ main section { padding-top: 25px;}
 .custom-radio-small input { display: none; /* Hide default radio button */}
 .custom-radio-small:hover { border-color: var(--dark-grey);}
 .custom-radio-small.active { color: var(--black); border-color: var(--black);}
-.custom-radio-small.active::after { content:"✔"; border-color: var(--green); background-color: var(--green); color: var(--white);  }
+.custom-radio-small.active::before { content:""; height: 23px; width: 23px; border: 1px solid var(--green); position: absolute; left:-30px; top:-3px;  background-color: var(--white); color: var(--white); border-radius: 100px;; display: block; }
+.custom-radio-small.active::after { content:""; height: 12px; width: 12px; background-color: var(--green); position: absolute; left:-25px; top:2px;  }
 
+.customFrame { border-top: 1px #ccc solid; margin-top: 71px;}
 
 .drop-zone { width: 100%; height: 125px; display: flex; align-items: center; justify-content: center; text-align: center; cursor: pointer; color: var(--primary); font-size: 15px; }
 
@@ -430,7 +453,7 @@ main section { padding-top: 25px;}
 
 .customCheckbox label:before {
   content:'';
-  border: 1px solid var(--dark-grey); border-radius: 4px;
+  border: 1px solid var(--dark-grey); border-radius: 2px;
    width: 19px; height: 19px;
   display: inline-block; 
   position: relative;
@@ -441,7 +464,7 @@ main section { padding-top: 25px;}
 
 .customCheckbox input:checked + label:after {
   content: '✔'; text-align: center; font-size: 12px; padding-top:2px;
-  display: block; width: 21px; height: 21px; border-radius: 4px;
+  display: block; width: 20px; height: 20px; border-radius: 2px;
   position: absolute; top:0px; left: 0px; border-color: var(--green);
   background-color: var(--green); color: var(--white); 
 }
@@ -565,6 +588,13 @@ main section { padding-top: 25px;}
 .product-action .whishlist .far { font-size: 18px; color: var(--white);}
 .product-action .selectedCategory { background-color: var(--white); text-align: center; border-radius: 3px; color: var(--black); padding: 3px 8px; font-size: 13px; display: inline-block; position: absolute; left:15px; top:15px;}
 
+.position-relative:hover .product-action-home { display: block;}
+.product-action-home { position: absolute; top:0; left: 0; display: none; text-align: center; background-color: rgba(0,0,0,0.3); height: 100%; width: 100%; border-radius: 10px; }
+.product-action-home .btn { top:65px; position: relative; }
+.product-action-home .whishlist { top:15px; right:15px; position: absolute; background-color: var(--secondary); border-radius: 4px; padding:5px 5px 3px 5px;}
+.product-action-home .whishlist .far { font-size: 18px; color: var(--white);}
+.product-action-home .selectedCategory { background-color: var(--white); text-align: center; border-radius: 3px; color: var(--black); padding: 3px 8px; font-size: 13px; display: inline-block; position: absolute; left:15px; top:15px;}
+
 .paddingControl { padding:7px 0 5px 0 !important}
 .paddingControl p { margin:0 !important}
 
@@ -632,6 +662,8 @@ main section { padding-top: 25px;}
 
 
 @media screen and (max-width: 600px) {
+  .socialAccounts { float: left;}
+  .sticky-header .logoWrapper { display: block !important;}
   main { margin-top: 94px;}
   main section { margin-top: 0;}
   #homeBanner { height: auto;}
