--- a/public/front-assets/css/style.css
+++ b/public/front-assets/css/style.css
@@ -134,10 +134,11 @@ main section { padding-top: 25px;}
 .priceHover::after { content: ""; width: 25px; height: 25px; position: absolute; right:0px; top:3px; background: url('../images/sprites.svg'); background-repeat: no-repeat; background-position: -193px -90px;  }
 .priceHover:hover>.breakups { display: block; }
 
-.breakups { display: none; z-index: 999; width: 250px; right:0; top:30px; box-shadow: 0 5px 6px rgba(0, 0, 0, 0.2); border-radius: 4px; position: absolute; padding:10px 15px; background-color: var(--white); color: var(--black); }
-.breakups .breakup-details { display: flex; }
-.breakups .breakup-details .icon-tick {  margin-top: 3px;; height: 35px; width: 35px; background: url('../images/sprites.svg'); background-repeat: no-repeat; background-position: -192px -43px;  ;}
-.breakups .breakup-details .text { margin-left: 15px;}
+.breakups { display: none; z-index: 999; width: 210px; right:0; top:30px; box-shadow: 0 5px 6px rgba(0, 0, 0, 0.2); border-radius: 4px; position: absolute; padding:10px 15px; background-color: var(--white); color: var(--black); }
+.breakups .breakup-details { display: flex;}
+.breakups .breakup-details .icon-tick { margin-top: 7px; height: 26px; width: 26px; background: url('../images/sprites.svg'); background-repeat: no-repeat; background-position: -192px -43px;}
+.breakups .breakup-details .icon-edit { position: absolute; right:15px; margin-top:5px; height: 20px; width: 20px; background: url('../images/sprites.svg'); background-repeat: no-repeat; background-position: -221px -43px;}
+.breakups .breakup-details .text { margin-left: 10px;}
 .breakups .breakup-details .text p { margin: 0;}
 .breakups .breakup-details .text .red { color: var(--dark-grey);}
 
