--- a/public/front-assets/css/style.css
+++ b/public/front-assets/css/style.css
@@ -130,6 +130,102 @@ main { margin-top: 120px;}
 main section { padding-top: 25px;}
 
 
+.frame_mobile_menu {
+  padding: 10px; display: none;
+  position: relative;
+  z-index: 1;
+}
+.frame_mobile_menu::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+hgroup {
+  float: left;
+  margin: 2px 2px 2px 10px;
+}
+aside {
+  top: 0;
+  bottom: 0;
+  box-sizing: border-box;
+  transition: all 0.4s ease;
+}
+aside.active {
+  left: 0;
+}
+aside a {
+  display: block;
+  padding: 1.2rem;
+  text-decoration: none;
+  font-size: 1rem;
+  color: #818181;
+  border-bottom: 1px solid #414141;
+}
+.toggle-wrap {
+  position: relative;
+  cursor: pointer;
+  float: left;
+
+  /*disable selection*/
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.toggle-bar,
+.toggle-bar::before,
+.toggle-bar::after,
+.toggle-wrap.active .toggle-bar,
+.toggle-wrap.active .toggle-bar::before,
+.toggle-wrap.active .toggle-bar::after {
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+.toggle-bar {
+  width: 38px;
+  margin: 10px 0;
+  position: relative;
+  border-top: 6px solid #303030;
+  display: block;
+}
+.toggle-bar::before,
+.toggle-bar::after {
+  content: "";
+  display: block;
+  background: #303030;
+  height: 6px;
+  width: 38px;
+  position: absolute;
+  top: -16px;
+  -ms-transform: rotate(0deg);
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -ms-transform-origin: 13%;
+  -webkit-transform-origin: 13%;
+  transform-origin: 13%;
+}
+.toggle-bar::after {
+  top: 4px;
+}
+.toggle-wrap.active .toggle-bar {
+  border-top: 6px solid transparent;
+}
+.toggle-wrap.active .toggle-bar::before {
+  -ms-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.toggle-wrap.active .toggle-bar::after {
+  -ms-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+
 .priceHover { position: relative; margin-top: 5px; padding-right: 25px;}
 .priceHover::after { content: ""; width: 25px; height: 25px; position: absolute; right:0px; top:3px; background: url('../images/sprites.svg'); background-repeat: no-repeat; background-position: -193px -90px;  }
 .priceHover:hover>.breakups { display: block; }
@@ -668,8 +764,9 @@ main section { padding-top: 25px;}
 
 
 @media screen and (max-width: 600px) {
+  aside { left:-100px; position: absolute; width:100px; height: 100%; padding-top: 70px; }
   .socialAccounts { float: left;}
-  .sticky-header .logoWrapper { display: block !important;}
+  .sticky-header .logoWrapper, .frame_mobile_menu { display: block !important;}
   main { margin-top: 94px;}
   main section { margin-top: 0;}
   #homeBanner { height: auto;}
